--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kash-it-ecom</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Kash.it</title>
+    <meta name="description" content="Kash.it ecommerce platform" />
+    <meta name="author" content="Kash.it" />
 
-    <meta property="og:title" content="kash-it-ecom" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Kash.it" />
+    <meta property="og:description" content="Kash.it ecommerce platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@kash_it" />
+    <meta name="twitter:image" content="/favicon.svg" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="/favicon.ico" />
   </head>
 
   <body>
